<resources>
    <string name="app_name">Hush Music</string>
    <string name="splash_title">Hush</string>
    <string name="splash_subtitle">MUSIC PLAYER</string>
    <string name="switch_tab">Switch between Music and YouTube</string>
    <string name="tab_music">Music</string>
    <string name="tab_video">YouTube</string>
    <string name="playing_background">Playing in background</string>
    <string name="channel_name">Background playback</string>
    <string name="channel_downloads">Downloads</string>
    <string name="downloading">Downloading</string>
    <string name="download_this">Download this</string>
    <string name="downloads">Downloads</string>
    <string name="scope_track">This track</string>
    <string name="scope_playlist">This playlist (%1$d)</string>
    <string name="kind_audio">Audio</string>
    <string name="kind_video">Video</string>
    <string name="select_all">Select all</string>
    <string name="select_none">Select none</string>
    <string name="download_n">Download %1$d</string>
    <string name="nothing_to_download">Nothing here to download</string>
    <string name="resolving">Reading…</string>
    <string name="queued">Queued %1$d</string>
    <string name="downloads_videos">Videos</string>
    <string name="delete">Delete</string>
    <string name="delete_n">Delete %1$d</string>
    <string name="delete_one">Delete “%1$s”?</string>
    <string name="delete_many">Delete %1$d downloads?</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="no_downloads">Nothing downloaded yet.\nDownloads are saved to your Music and Movies folders.</string>
</resources>
